[Amoleded] Fixed stylng with word devider lines - i.e. day changes.

--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -344,6 +344,10 @@ body {
     border: 1px solid var(--secondary);
 }
 
+.WordDividerLine-line {
+    background-color: var(--secondary);
+}
+
 /* Input Boxes */
 
 .DraftInputWithTitleV2-title-wrapper {
