[Amoleded] Fixed an issue with the styling of on hover context menues not displaying the seperators in the right colour.

--- a/reguilded/themes/amoleded/main.css
+++ b/reguilded/themes/amoleded/main.css
@@ -104,6 +104,11 @@ body {
     border-top: 1px solid var(--secondary);
 }
 
+.QuickActionBar-action-separator:before,
+.QuickActionBar-action-separator-right:before {
+    background-color: var(--secondary);
+}
+
 .ChannelHeaderMoreOptionsMenu-container {
     background-color: var(--primary);
 }
